2005-02-25  Lluis Sanchez Gual <lluis@novell.com>

	* HtmlForm.cs: Register the form in the page, so the page knows
	which is the main form.

2005-02-18  Lluis Sanchez Gual <lluis@novell.com>

	* HtmlHead.cs: Method name fix.

2005-01-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlForm.cs: submitStatements holds Hashtables.

2004-12-20  Lluis Sanchez Gual <lluis@novell.com>

	* HtmlHead.cs: Implemented.
	* HtmlHeadBuilder.cs: Implemented.
	* HtmlTitle.cs: Implemented.

2004-12-15 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlForm.cs: MakeRelative() can be null. Thanks to Denis Gervaille.

2004-11-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlForm.cs: fixed the Action property when running a different
	page than the one requested (Transfer). Closes bug #69318.

2004-11-26  Lluis Sanchez Gual <lluis@novell.com>

	* HtmlForm.cs: Add submit statements from the new Page.ClientScript
	property.

2004-06-23 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlForm.cs: disabled smartnavigation as we have no scripts to support
	it and failed when the browser was IE.

2004-05-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlForm.cs: default value for Enctype is "".
	* HtmlInputFile.cs: if no one set the encoding type for the HtmlForm,
	we set it to "multipart/form-data". Fixes bug #58359.

2004-01-15  Alon Gazit <along@mainsoft.com>
	* HtmlForm.cs: The property name always return the value of the
	property UniqueID.

2003-12-28  Alon Gazit <along@mainsoft.com>
	* HtmlSelect.cs: fix typo in LoadPostData().

2003-12-29  Alon Gazit <along@mainsoft.com>
	* HtmlInputButton.cs: update the implementation of RenderAttributes().
	Change the if statement that determines if the onclick script is
	rendered.  

2003-12-28  Alon Gazit <along@mainsoft.com>
	* HtmlSelect.cs: add parentheses to if statement. 
	Currently the else statement refers to the inner if statement. 

2003-12-28  Alon Gazit <along@mainsoft.com>