@@ -34,7 +34,7 @@ namespace System.Web.UI.HtmlControls{
 			if (Page != null && CausesValidation) {
 				string type = Type;
 				if (String.Compare (type, "button", true) == 0 || String.Compare (type, "submit", true) == 0) {
-					string script = Page.GetPostBackClientEvent (this, String.Empty);
+					string script = Page.ClientScript.GetPostBackClientEvent (this, String.Empty);
 					if (script != null && 
 						((String.Compare (type, "button", true) == 0  && Events[EventServerClick] != null )|| 
 						 (String.Compare (type, "submit", true) == 0 && Page.Validators.Count > 0))){
